# GeneticMarkerSearch

./: .gitignore  CMakeLists.txt  README.md  load_data.py  load_genomes.py
FinalProject/: .gitignore  CMakeLists.txt
FinalProject/include/: aho_corasick.h  base_manager.h  config.h  indexer.h  matcher.h  program.h  queue.h  queue_manager.h  reader.h  state.h  typedefs.h  utils.h
FinalProject/src/: aho_corasick.cpp  base_manager.cpp  indexer.cpp  main.cpp  matcher.cpp  program.cpp  reader.cpp  utils.cpp
benchmarks/: CMakeLists.txt  benchmark.cpp  benchmark.py
include/: aho_corasick.h  matcher.h  program.h  reader.h
libs/aho_corasick/: CMakeLists.txt
libs/aho_corasick/include/: aho_corasick.hpp
scripts/: load_genomes.py
src/: CMakeLists.txt  aho_corasick.cpp  config.cpp  main.cpp  matcher.cpp  matcher.hpp  program.cpp  program.hpp  reader.cpp  reader.hpp  utils.cpp  utils.hpp
